# warp-chatbot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/postgresql/: init.sql
src/: config.rs  lib.rs  main.rs  profanity.rs  retry.rs  store.rs  utils.rs
src/model/: answer.rs  pagination.rs  question.rs
src/routes/: answer.rs  question.rs
