[package]
name = "warp-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]

handle-errors = { path = "handle-errors" }

tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "0.8", features = ["v4"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.11", features = ["json"]}
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8.5"

